--- a/homework_03/pyproject.toml
+++ b/homework_03/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["lakomiy <lakomiy12@gmail.com>"]
 python = "^3.8"
 fastapi = "^0.70.0"
 uvicorn = "^0.15.0"
+docker = "^5.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
