--- a/homework_03/pyproject.toml
+++ b/homework_03/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 fastapi = "^0.70.0"
 uvicorn = "^0.15.0"
 docker = "^5.0.3"
+docker-compose = "^1.29.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
