--- a/homework_03/Dockerfile
+++ b/homework_03/Dockerfile
@@ -1,4 +1,4 @@
-#docker build . -t homework && docker run -p 8000:8000 homework
+#docker build . -t homework_003 && docker run -p 8000:8000 homework_003
 FROM python:3.9-buster
 WORKDIR /var/app
 RUN pip install poetry==1.1.11
@@ -7,4 +7,4 @@ RUN poetry config virtualenvs.create false
 RUN poetry install
 COPY app.py .
 
-CMD uvicorn app:app --host=0.0.0.0
+CMD uvicorn app:app --host=0.0.0.0 --port=8000
