--- a/homework_03/Dockerfile
+++ b/homework_03/Dockerfile
@@ -6,5 +6,5 @@ COPY pyproject.toml poetry.lock ./
 RUN poetry config virtualenvs.create false
 RUN poetry install
 COPY app.py .
-
-CMD uvicorn app:app --host=0.0.0.0 --port=8000
+EXPOSE 8000
+CMD uvicorn app:app --host=0.0.0.0
